[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
@@ -2456,6 +2456,8 @@ rendering.macro.spaceindex.description=Listet die Dokumente in einem Bereich auf
 rendering.macro.spaceindex.name=Bereichsindex
 rendering.macro.spaceindex.parameter.count.description=Die maximale Anzahl von Dokumenten, die angezeigt werden sollen. Standardm\u00E4\u00DFig werden bis zu 100 Dokumente aufgelistet. Wenn alle Dokumente gezeigt werden sollen, geben Sie 0 ein.
 rendering.macro.spaceindex.parameter.count.name=Anzahl
+rendering.macro.spaceindex.parameter.sort.description=Optionale Angabe, wie die Seiten sortiert werden sollen.\nM\u00F6gliche Werte sind\: 'creationDate'\: nach Erstellungsdatum, 'modificationDate'\: neueste \u00C4nderungen zuerst, 'docName'\: alphabetisch nach Dokumentenname. \nVoreinstellung ist Sortierung nach Erstellungsdatum.
+rendering.macro.spaceindex.parameter.sort.name=Sortierung
 rendering.macro.spaceindex.parameter.space.description=Der Bereich f\u00FCr den die Dokumente angezeigt werden sollen. Wenn dies fehlt wird der aktuelle Bereich verwendet.
 rendering.macro.spaceindex.parameter.space.name=Bereich
 rendering.macro.spaces.description=Zeigt alle Bereiche in diesem Wiki.
