--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -3136,7 +3136,7 @@ xe.blog.code.postedby=Publi\u00E9 par
 xe.blog.code.previousmonth=Mois pr\u00E9c\u00E9dent
 xe.blog.code.previousweek=Semaine pr\u00E9c\u00E9dente
 xe.blog.code.published=Cet article de blog n'a pas encore \u00E9t\u00E9 publi\u00E9.
-xe.blog.code.readpost=Lire l'article complet
+xe.blog.code.readpost=Lire l\u2019article complet
 xe.blog.code.sheetexplanation=Cette sheet doit \u00EAtre utilis\u00E9e afin d'afficher un article de blog.
 xe.blog.code.title=Blog
 xe.blog.manage.blogtitle=Titre du Billet
@@ -3784,8 +3784,8 @@ xe.statistics.to=vers
 xe.statistics.user=Utilisateur
 xe.statistics.views=Visualisations
 xe.statistics.visit=Statistiques de visite
-xe.tag.activity=Flux d''activit\u00E9 pour les documents taggu\u00E9s avec {0}
-xe.tag.alldocs=Tous les documents taggu\u00E9s avec {0}
+xe.tag.activity=Flux d\u2019activit\u00E9 pour les documents tagu\u00E9s avec {0}
+xe.tag.alldocs=Tous les documents tagu\u00E9s avec {0}
 xe.tag.delete=Supprimer le tag {0}
 xe.tag.delete.failure=La suppression du tag {0} a \u00E9chou\u00E9
 xe.tag.delete.link=Supprimer
