--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
@@ -1978,7 +1978,7 @@ platform.extension.distributionWizard.extensionsStepSummary=Atjaunot uzst\u0101d
 platform.extension.distributionWizard.extensionsStepTitle=Papla\u0161in\u0101jumi
 platform.extension.distributionWizard.extensionsStepUpToDate=Visi papla\u0161in\u0101jumi ir aktu\u0101li
 platform.extension.distributionWizard.skipHint=Jaut\u0101t man atkal, kad XWiki tiks p\u0101rstart\u0113ts
-platform.extension.distributionWizard.skipLabel=Turpin\u0101t
+platform.extension.distributionWizard.skipLabel=V\u0113l\u0101k
 platform.extension.distributionWizard.stepHeading={0,choice,0\#|0<Solis {0} \u2014 } {1} 
 platform.extension.distributionWizard.uiStepDescription=Lietot\u0101ja saskarne ir viki lapu kopums, kas pied\u0101v\u0101 augsta l\u012Bme\u0146a iesp\u0113jas, izmantojot XWiki izpildes vidi. \u0160\u012Bs lapas ir funkcion\u0101li sagrup\u0113tas da\u017E\u0101d\u0101s lietotn\u0113s, piem\u0113ram, emu\u0101ri, aktivit\u0101\u0161u straume, kontrolpanelis. Lietotnes ir iepakotas k\u0101 uzst\u0101d\u0101mi papla\u0161in\u0101jumi Papla\u0161in\u0101jumu p\u0101rvaldniek\u0101.
 platform.extension.distributionWizard.uiStepDistributionHint=Ir noteikta sekojo\u0161a distrib\u016Bcija
