[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -3784,8 +3784,8 @@ xe.statistics.to=vers
 xe.statistics.user=Utilisateur
 xe.statistics.views=Visualisations
 xe.statistics.visit=Statistiques de visite
-xe.tag.activity=Flux d''activit\u00E9 pour les documents taggu\u00E9s avec {0}
-xe.tag.alldocs=Tous les documents taggu\u00E9s avec {0}
+xe.tag.activity=Flux d\u2019activit\u00E9 pour les documents tagu\u00E9s avec {0}
+xe.tag.alldocs=Tous les documents tagu\u00E9s avec {0}
 xe.tag.delete=Supprimer le tag {0}
 xe.tag.delete.failure=La suppression du tag {0} a \u00E9chou\u00E9
 xe.tag.delete.link=Supprimer
