[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_da.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_da.properties
@@ -2320,6 +2320,11 @@ rendering.macro.include.parameter.context.value.CURRENT=Nuv\u00E6rende
 rendering.macro.include.parameter.context.value.NEW=Ny
 rendering.macro.include.parameter.document.description=Navn p\u00E5 dokument, der skal inds\u00E6ttes
 rendering.macro.include.parameter.document.name=dokument
+rendering.macro.include.parameter.reference.name=reference
+rendering.macro.include.parameter.section.description=Valgfri ID for et afsnit, der skal inkluderes i det angivne dokument.
+rendering.macro.include.parameter.section.name=section
+rendering.macro.include.parameter.type.description=Referencetype.
+rendering.macro.include.parameter.type.name=type
 rendering.macro.info.content.description=Indhold i rammen.
 rendering.macro.info.description=Viser informationstekst.
 rendering.macro.info.name=Information
