--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_es.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_es.properties
@@ -1876,6 +1876,8 @@ rendering.macro.include.parameter.context.value.CURRENT=Actual
 rendering.macro.include.parameter.context.value.NEW=Nuevo
 rendering.macro.include.parameter.document.description=nombre del documento a incluir
 rendering.macro.include.parameter.document.name=document
+rendering.macro.include.parameter.section.name=secci\u00F3n
+rendering.macro.include.parameter.type.name=tipo
 rendering.macro.info.content.description=El contenido para poner en el cuadro.
 rendering.macro.info.description=Muestra una nota informativa.
 rendering.macro.info.name=Mensaje Informativo
