--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -2361,6 +2361,14 @@ rendering.macro.display.parameter.reference.description=R\u00E9f\u00E9rence de l
 rendering.macro.display.parameter.section.name=section
 rendering.macro.display.parameter.type.description=Format de la r\u00E9f\u00E9rence
 rendering.macro.display.parameter.type.name=type
+rendering.macro.display.parameter.type.value.ATTACHMENT=Pi\u00E8ce jointe
+rendering.macro.display.parameter.type.value.BLOCK=Bloc
+rendering.macro.display.parameter.type.value.CLASS_PROPERTY=Propri\u00E9t\u00E9 de la classe
+rendering.macro.display.parameter.type.value.DOCUMENT=Document
+rendering.macro.display.parameter.type.value.OBJECT=Objet
+rendering.macro.display.parameter.type.value.OBJECT_PROPERTY=Propri\u00E9t\u00E9 de l'objet
+rendering.macro.display.parameter.type.value.SPACE=Espace
+rendering.macro.display.parameter.type.value.WIKI=Wiki
 rendering.macro.documents.description=Affiche la liste des documents dans un tableau dynamique
 rendering.macro.documents.name=Documents
 rendering.macro.documents.parameter.actions.description=Afficher ou pas la colonne des actions
@@ -2432,6 +2440,9 @@ rendering.macro.include.parameter.context.value.CURRENT=Contexte de la page cour
 rendering.macro.include.parameter.context.value.NEW=Contexte original
 rendering.macro.include.parameter.document.description=le nom du document \u00E0 inclure
 rendering.macro.include.parameter.document.name=document
+rendering.macro.include.parameter.section.name=section
+rendering.macro.include.parameter.type.description=Format de la r\u00E9f\u00E9rence
+rendering.macro.include.parameter.type.name=type
 rendering.macro.include.parameter.type.value.ATTACHMENT=Pi\u00E8ce jointe
 rendering.macro.include.parameter.type.value.BLOCK=Bloc
 rendering.macro.include.parameter.type.value.CLASS_PROPERTY=Propri\u00E9t\u00E9 de la classe
@@ -2489,6 +2500,7 @@ rendering.macro.spaceindex.description=Liste les documents d'un espace
 rendering.macro.spaceindex.name=Index des espaces
 rendering.macro.spaceindex.parameter.count.description=Le nombre maximum de documents \u00E0 afficher. Par d\u00E9faut, 100 documents seront list\u00E9s. Si vous souhaitez afficher tous les documents, utilisez 0 comme valeur de ce param\u00E8tre.
 rendering.macro.spaceindex.parameter.count.name=compteur
+rendering.macro.spaceindex.parameter.sort.name=tri
 rendering.macro.spaceindex.parameter.space.description=L'espace pour lequel afficher la liste des documents. S'il n'est pas sp\u00E9cifi\u00E9, l'espace courant sera utilis\u00E9.
 rendering.macro.spaceindex.parameter.space.name=espace
 rendering.macro.spaces.description=Affiche tous les espaces du wiki courant
@@ -3882,6 +3894,7 @@ xe.webdav.initialize.activex=L'activation d'un objet ActiveX requis n'a pu avoir
 xe.webdav.initialize.error=Une erreur est survenue en essayant d'initialiser l'\u00E9diteur Sharepoint.
 xe.webdav.install.foxwiki=Une extension Firefox est n\u00E9cessaire pour effectuer cette action, souhaitez-vous l'installer?
 xe.webdav.sorry=D\u00E9sol\u00E9, vous devez utiliser Firefox ou Internet Explorer pour b\u00E9n\u00E9ficier de cette fonctionnalit\u00E9.
+xe.welcome.edit=Modifier le message de bienvenue
 xe.wikimacrobridge.macroDescription=Description
 xe.wikimacrobridge.macroId=id
 xe.wikimacrobridge.macroName=Nom
