--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
@@ -2389,6 +2389,11 @@ rendering.macro.include.parameter.context.value.CURRENT=Teko\u0161ais
 rendering.macro.include.parameter.context.value.NEW=Jaunais
 rendering.macro.include.parameter.document.description=iek\u013Caujam\u0101 dokumenta nosaukums
 rendering.macro.include.parameter.document.name=dokuments
+rendering.macro.include.parameter.reference.name=saite
+rendering.macro.include.parameter.section.description=Neoblig\u0101ts sada\u013Cas id, ko iek\u013Caut nor\u0101d\u012Btaj\u0101 dokument\u0101.
+rendering.macro.include.parameter.section.name=sada\u013Ca
+rendering.macro.include.parameter.type.description=Saites tips
+rendering.macro.include.parameter.type.name=tips
 rendering.macro.info.content.description=Kast\u0113 ievietojamais saturs.
 rendering.macro.info.description=Par\u0101da informat\u012Bvu zi\u0146ojumu
 rendering.macro.info.name=Info zi\u0146ojums
