--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_pt_BR.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_pt_BR.properties
@@ -2390,6 +2390,11 @@ rendering.macro.include.parameter.context.value.CURRENT=Atual
 rendering.macro.include.parameter.context.value.NEW=Novo
 rendering.macro.include.parameter.document.description=o nome do documento a ser inclu\u00EDdo
 rendering.macro.include.parameter.document.name=documento
+rendering.macro.include.parameter.reference.name=refer\u00EAncia
+rendering.macro.include.parameter.section.description=Um id opcional de uma se\u00E7\u00E3o do documento inclu\u00EDdo a ser exibido no documento atual.
+rendering.macro.include.parameter.section.name=se\u00E7\u00E3o
+rendering.macro.include.parameter.type.description=O tipo da refer\u00EAncia.
+rendering.macro.include.parameter.type.name=tipo
 rendering.macro.info.content.description=O conte\u00FAdo a ser colocado na caixa de mensagem.
 rendering.macro.info.description=Exibe uma mensagem de informa\u00E7\u00E3o.
 rendering.macro.info.name=Mensagem de Informa\u00E7\u00E3o
