--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
@@ -595,7 +595,7 @@ core.menu.view.information=Informa\u021Bie
 core.menu.view.source=Vizualizare surse
 core.menu.watch=Monitorizare
 core.menu.watchlist.add.page=Monitoriza\u021Bi aceast\u0103 pagin\u0103
-core.menu.watchlist.add.space=Monitoriza\u021Bi spa\u021Biu\: {0}
+core.menu.watchlist.add.space=Monitoriza\u021Bi spa\u021Biu
 core.menu.watchlist.add.wiki=Monitoriza\u021Bi wiki\: {0}
 core.menu.watchlist.management=Administrarea listei monitorizate
 core.menu.watchlist.remove.page=Opri\u021Bi monitorizarea paginii
