--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ru.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ru.properties
@@ -2296,6 +2296,11 @@ rendering.macro.include.parameter.context.value.CURRENT=\u0422\u0435\u043A\u0443
 rendering.macro.include.parameter.context.value.NEW=\u041D\u043E\u0432\u044B\u0439
 rendering.macro.include.parameter.document.description=\u0438\u043C\u044F \u0432\u043A\u043B\u044E\u0447\u0430\u0435\u043C\u043E\u0433\u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 rendering.macro.include.parameter.document.name=\u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
+rendering.macro.include.parameter.reference.name=\u0421\u0441\u044B\u043B\u043A\u0430
+rendering.macro.include.parameter.section.description=\u041D\u0435\u043E\u0431\u044F\u0437\u0430\u0442\u0435\u043B\u044C\u043D\u044B\u0439 \u0438\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u043E\u0440 \u0440\u0430\u0437\u0434\u0435\u043B\u0430 \u0432 \u0443\u043A\u0430\u0437\u0430\u043D\u043D\u043E\u043C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0435.
+rendering.macro.include.parameter.section.name=\u0440\u0430\u0437\u0434\u0435\u043B
+rendering.macro.include.parameter.type.description=\u0422\u0438\u043F \u0441\u0441\u044B\u043B\u043A\u0438
+rendering.macro.include.parameter.type.name=\u0442\u0438\u043F
 rendering.macro.info.content.description=\u041A\u043E\u043D\u0442\u0435\u043D\u0442 \u0434\u043B\u044F \u0440\u0430\u0437\u043C\u0435\u0449\u0435\u043D\u0438\u044F \u0432 \u0440\u0430\u043C\u043A\u0435
 rendering.macro.info.description=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u043E\u043D\u043D\u043E\u0435 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435
 rendering.macro.info.name=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u043E\u043D\u043D\u043E\u0435 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435
