--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_sv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_sv.properties
@@ -2370,6 +2370,9 @@ rendering.macro.include.parameter.context.value.CURRENT=Aktuellt
 rendering.macro.include.parameter.context.value.NEW=Nytt
 rendering.macro.include.parameter.document.description=namnet p\u00E5 dokumentet som skall inkluderas
 rendering.macro.include.parameter.document.name=dokument
+rendering.macro.include.parameter.reference.name=referens
+rendering.macro.include.parameter.type.description=Typen p\u00E5 referensen
+rendering.macro.include.parameter.type.name=typ
 rendering.macro.info.content.description=Inneh\u00E5llet i boxen.
 rendering.macro.info.description=Visar en informationsmedelande
 rendering.macro.info.name=Informationsmedelande
