--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ko.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ko.properties
@@ -246,15 +246,15 @@ admin.import.description=\uC704\uD0A4\uB85C \uD398\uC774\uC9C0\uB098 \uC560\uD50
 admin.invitation=\uCD08\uB300 \uC560\uD50C\uB9AC\uCF00\uC774\uC158
 admin.language=\uC5B8\uC5B4
 admin.programming=\uD504\uB85C\uADF8\uB798\uBC0D
-admin.rights=\u00CF\u00E0\u00F2\u00CF\u00FB\u00D6\u00CC\u00ED\u00E0
+admin.rights=\uAD8C\uD55C
 admin.save=wiki\u00CE\u2022\u00BA
 admin.showsections=\u00CF\u00FA\u2020\u00CC\u00F6\u00AE\u00CC\u00EF\u00FA \u00CF\u00A2\u00D6\u00CE\u2022\u00F2 \u00CF\u00F9\u00C4\u00CF\u00E3\u2020\u00CF\u2264\u00F2\u00CD\u221E\u00C4
 admin.skin=\u00CF\u00A2\u00D6\u00CE\u2022\u00F2
 admin.smtp=\u00CC\u00EE\u00BA\u00CE\u2202\u00C4\u00CD\u221E\u00C4
 admin.spaceadmin=\u00CC\u00E4\u03C0\u00CC\u00F2\u00FA\u00CD\u221E\u00C4 Wiki
-admin.users=\u00CF\u00F1\u220F\u00CF\u00F1\u00A5
+admin.users=\uC0AC\uC6A9\uC790\uB4E4
 admin_email=\u00CF\u00D1\u2020\u00CC\u00C9\u00F9)
-adminexport=\u00CF\u00E0\u00F2\u00CF\u00FB\u00D6\u00CC\u00ED\u00E0
+adminexport=\uB0B4\uBCF4\uB0B4\uAE30
 adminglobalrights=<em>$doc.displayTitle</em> \u00CF\u00F3\u2260\u00CF\u00C7\u00A8
 admingroups=\u00CE\u2202\u00C4\u00CF\u221E\u00A9
 adminimport=\u00CE\u2264\u00D1\u00CF\u2020\u00D1
@@ -331,7 +331,7 @@ changes.from=\u00CF\u00F3\u00EA\u00CF\u00D1\u00FA
 changes.in=\u00CF\u03A9\u00EE\u00CE\u00A9\u00F2\u00CC\u00E4\u220F
 changes.metadata.author=\u00CF\u00F3\u00DC\u00CE\u00E4\u00EE
 changes.metadata.defaultLanguage=\u00CD\u2265\u00BA\u00CC\u00C9\u00FA \u00CF\u00F1\u220F\u00CF\u00F1\u00A5
-changes.metadata.language=\u00CF\u00F1\u220F\u00CF\u00F1\u00A5
+changes.metadata.language=\uC5B8\uC5B4
 changes.metadata.name=\u00CF\u00F9\u00A5\u00CE\u00B6\u00D1 \u00CF\u2020\u00C4\u00CF\u00FB\u00EA\u00CD\u221E\u00C4
 changes.metadata.parent=\u00CD\u2265\u00B5\u00CD\u221E\u00D1
 changes.metadata.web=\u00CC\u00E9\u00F2\u00CF\u00F9\u00A5\u00CF\u00DF\u00C4
@@ -733,7 +733,7 @@ eventStartdate=\u00CF\u00FA\u00D1\u00CF\u03C0\u00F2 \u00CF\u00A2\u00D6\u00CE\u20
 eventTitle=)
 eventURL=\u00CF\u00F3\u00EA
 existingtranslations=\u00CF\u2020\u00D1\u00CE\u00DF\u00F9 \u00CE\u2202\u00C4\u00CF\u221E\u00A9
-export=\u00CF\u00E0\u00F2\u00CF\u00FB\u00D6\u00CC\u00ED\u00E0
+export=\uB0B4\uBCF4\uB0B4\uAE30
 export_addhistory=\u00CF\u00E0\u00F2\u00CF\u2202\u00FA \u00CF\u00E0\u00F2\u00CF\u2202\u00FA
 export_author=\u00CF\u00F9\u00A5
 export_authorpreserved=\u00CE\u00A8\u00F2\u00CF\u00C7\u00A8 \u00CE\u00A9\u00A5\u00CC\u00F3\u00E0 
@@ -784,8 +784,8 @@ italics=\u00CE\u00C7\u00A5\u00CE\u2202\u00C4
 italicstext=\u00CF\u00F3\u221E\u00CD\u2264\u221E \u00CF\u00F3\u221E\u00CD\u2264\u221E \u00CE\u2265\u00A5\u00CD\u220F\u221E
 javaheapspace=\u00CD\u220F\u221E\u00CF\u00F1\u00B5 \u00CF\u00F2\u00E0\u00CF\u00F4\u220F\u00CF\u00F3\u00EA\u00CF\u00D1\u00FA \u00CF\u00FB\u00EA\u00CE\u221E\u00EE \u00CE\u00E7\u00EE\u00CE\u00D8\u220F \u00CD\u2265\u00B5\u00CD\u221E\u00D1\!
 javamail_extra_props=\u00CE\u00C7\u00A5\u00CF\u00F6\u00A9 \u00CC\u00E4\u03C0\u00CC\u00F2\u00FA\u00CE\u2022\u00BA \u00CF\u00C7\u00A8\u00CF\u00F6\u00A9\u00CC\u00EF\u00F2\u00CE\u00E4\u00EE
-language=\u00CF\u00F1\u220F\u00CF\u00F1\u00A5
-languages=\u00CF\u00F1\u220F\u00CF\u00F1\u00A5
+language=\uC5B8\uC5B4
+languages=\uC5B8\uC5B4\uB4E4
 lastauthor=\u00CF\u2020\u00C4\u00CF\u00FB\u00EA \u00CE\u00DF\u00E0\u00CF\u00DF\u00C4\u00CE\u00DF\u00E2
 lastmodifiedby=\u00CF\u00F3\u00EA \u00CD\u2265\u00C5\u00CF\u00F3\u00EA
 lastmodifiedon=\u00CF\u00FA\u00D1\u00CF\u00F3\u00EA
@@ -1161,7 +1161,7 @@ welcome=\u00CC\u00F2\u00D1\u00CF\u00FB\u00A8
 welcometoclasseditor=\u00CF\u00A2\u00D6\u00CE\u2022\u00F2 \u00CC\u00F4\u00F2\u00CF\u00F2\u00C5\u00CF\u00F9\u00D1 \u00CF\u2020\u00FA\u00CF\u00F4\u220F\u00CC\u00EF\u00F2\u00CD\u2265\u2020 \u00CF\u00FB\u00A8\u00CF\u00C7\u221E\u00CF\u00F9\u00D1 \u00CF\u00D1\u2020\u00CF\u2020\u00EF\u00CC\u00EF\u00F2\u00CE\u00E4\u00EE. \u00CF\u00A2\u00D6\u00CE\u2022\u00F2\u00CF\u00F3\u00EA \u00CE\u2202\u00D1\u00CF\u00EF\u00BA\u00CE\u2022\u00BA \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CC\u00EF\u00F2\u00CD\u00B1\u221E\u00CE\u00C7\u00F2 \u00CF\u2202\u00EE\u00CD\u221E\u00C4\u00CC\u00EF\u00F2\u00CD\u220F\u221E \u00CF\u00FA\u00D1\u00CC\u00EF\u00F2\u00CF\u00F3\u00A8 \u00CE\u2202\u00D1\u00CF\u00EF\u00BA\u00CE\u2022\u00BA \u00CF\u00D1\u2020\u00CC\u00C9\u00F9\u00CC\u00EF\u00F2\u00CF\u00E3\u2260\u00CF\u00E3\u00FA\u00CF\u00F2\u00A7.
 welcometoobjecteditor=\u00CE\u2122\u00A9\u00CC\u00EB\u00FA \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CF\u00FB\u00EA\u00CF\u00F3\u00EA \u00CE\u2122\u00A9\u00CC\u00EB\u00FA\u00CE\u2022\u00BA \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CC\u00EF\u00F2\u00CF\u00E3\u2260\u00CF\u00E3\u00FA\u00CF\u00F2\u00A7. \u00CE\u00A8\u220F\u00CF\u00D1\u00FA\u00CF\u00F3\u00EA \u00CE\u2122\u00A9\u00CC\u00EB\u00FA\u00CE\u2022\u00BA \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CC\u00EF\u00F2\u00CD\u00B1\u221E\u00CE\u00C7\u00F2 \u00CF\u2202\u00EE\u00CD\u221E\u00C4\u00CC\u00EF\u00F2\u00CD\u220F\u221E \u00CF\u00FA\u00D1\u00CC\u00EF\u00F2\u00CF\u00F3\u00A8 \u00CE\u2122\u00A9\u00CC\u00EB\u00FA\u00CE\u2022\u00BA \u00CF\u00D1\u2020\u00CC\u00C9\u00F9\u00CC\u00EF\u00F2\u00CF\u00E3\u2260\u00CF\u00E3\u00FA\u00CF\u00F2\u00A7.
 welcometorightseditor=\u00CF\u2020\u00EB\u00CD\u2211\u00BA \u00CD\u2202\u00E5\u00CC\u00EF\u00FA\u00CF\u00F9\u00D1 \u00CF\u2020\u00FA\u00CD\u00B1\u221E\u00CC\u00EF\u2020 \u00CF\u00E0\u00F2 \u00CF\u00FB\u00E0\u00CE\u00E4\u00EE \u00CE\u2122\u00A9\u00CC\u00EB\u00FA\u00CE\u2022\u00BA \u00CF\u2020\u00C4\u00CF\u00FB\u2022\u00CC\u00EF\u00F2\u00CF\u00E3\u2260\u00CF\u00E3\u00FA\u00CF\u00F2\u00A7. \u00CF\u00E3\u2020\u00CF\u00F6\u221E\u00CF\u00F9\u00B5 \u00CF\u00FB\u00D6\u00CF\u00FB\u2022\u00CF\u00F9\u00D1 \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CC\u00EF\u00F2\u00CD\u00B1\u221E\u00CE\u00C7\u00F2 \u00CF\u2202\u00EE\u00CD\u221E\u00C4\u00CC\u00EF\u00F2\u00CD\u220F\u221E \u00CF\u00FA\u00D1\u00CC\u00EF\u00F2\u00CF\u00F3\u00A8 \u00CF\u2020\u00C5\u00CE\u00E3\u03C0\u00CC\u00EF\u00FA \u00CF\u00FB\u00D6\u00CF\u00FB\u2022\u00CF\u00F9\u00D1 \u00CF\u00D1\u2020\u00CC\u00C9\u00F9\u00CC\u00EF\u00F2\u00CF\u00E3\u2260\u00CF\u00E3\u00FA\u00CF\u00F2\u00A7\:
-wikicontent=\u00CF\u00F1\u220F\u00CF\u00F1\u00A5
+wikicontent=\uB0B4\uC6A9
 wikicontentcannotbeempty=wiki \u00CC\u00E9\u00F2\u00CF\u00F9\u00A5\u00CF\u00DF\u00C4\u00CF\u00F9\u00F2 \u00CE\u00C7\u00A5\u00CF\u00F6\u00A9\u00CF\u00F9\u00C4 \u00CF\u00F4\u00D1\u00CF\u2020\u00D1\u00CC\u00EF\u00F2\u00CD\u2264\u00E5 \u00CE\u03C0\u00E0 \u00CC\u00F3\u00E0\u00CF\u00F6\u00A9\u00CE\u00EA\u00F2\u00CF\u00DF\u00C4 \u00CF\u00EF\u00E4\u00CE\u00E4\u00EE\u00CE\u00E3\u00A7.
 wikieditor=WIKI \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CF\u00FB\u00EA
 wikiname=\u00CE\u00C7\u00A5\u00CF\u00F6\u00A9
@@ -1325,7 +1325,7 @@ xe.dashboard.wiki.spaces=\u00CF\u2020\u00C4\u00CF\u00FB\u00EA\u00CE\u2022\u00BA
 xe.dashboard.wiki.tagcloud=\u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CC\u00EF\u00F2\u00CD\u2265\u2020
 xe.document.copy=\u00CE\u00A8\u220F\u00CF\u00D1\u00FA \u00CE\u2264\u2020\u00CE\u00C5\u00BA\u00CE\u00E4\u00EE
 xe.document.copy.do=\u00CF\u00C7\u00A8\u00CE\u2265\u220F
-xe.document.copy.language=\u00CF\u00F1\u220F\u00CF\u00F1\u00A5\:
+xe.document.copy.language=\uC5B8\uC5B4\:
 xe.document.copy.source=\u00CC\u00C5\u00A5\u00CE\u00B6\u2260\u00CC\u00EF\u00F2\u00CF\u00E3\u2260\u00CF\u00E3\u00FA\u00CF\u00F2\u00A7\:
 xe.document.copy.target=\u00CC\u00EB\u00FA\u00CF\u2020\u00C5 Doc\:
 xe.document.copying=\u00CE\u00A8\u220F\u00CF\u00D1\u00FA \u00CD\u2211\u00BA\u00CF\u00F5\u00EA \u00CE\u00A8\u220F\u00CF\u00D1\u00FA
@@ -1375,7 +1375,7 @@ xe.monitor.url=\u00CE\u221E\u00EE\u00CD\u00E6\u00BA\u00CE\u00E3\u00A7\:
 xe.officeimporter.import.appendresult=\u00CE\u221E\u00A9\u00CE\u2264\u00EF \u00CC\u00EB\u00FA\u00CF\u2020\u00FA
 xe.officeimporter.import.document=\u00CE\u00A8\u220F\u00CF\u00D1\u00FA
 xe.officeimporter.import.filterstyles=\u00CE\u00A9\u00EE\u00CF\u00F9\u220F \u00CC\u00E9\u00F2\u00CF\u00F9\u00A5\u00CF\u00DF\u00C4
-xe.officeimporter.import.import=\u00CF\u00E0\u00F2\u00CF\u00FB\u00D6\u00CC\u00ED\u00E0
+xe.officeimporter.import.import=\uBD88\uB7EC\uC624\uAE30
 xe.officeimporter.import.splitting=\u00CF\u00F9\u00A5\u00CE\u00B6\u00D1\u00CF\u00F9\u00A5\u00CE\u00F9\u00BA\u00CD\u2265\u2020
 xe.officeimporter.import.splitting.heading=\u00CE\u00A8\u220F\u00CF\u00D1\u00FA
 xe.officeimporter.import.splitting.headinglevels=\u00CF\u00EF\u00D1\u00CF\u00F9\u00A5 \u00CC\u00E9\u00F2\u00CF\u00F9\u00A5\u00CF\u00DF\u00C4\u00CE\u2022\u00BA \u00CE\u00C7\u00F2\u00CE\u00E0\u00D1\u00CD\u220F\u221E \u00CF\u00FA\u00D1\u00CC\u00EF\u00F2\u00CF\u00F3\u00A8 \u00CF\u2122\u00BA\u00CD\u221E\u00FA\u00CF\u00DF\u00C4\u00CE\u00E4\u00EE
@@ -1448,8 +1448,9 @@ xe.panels.new.space=\u00CF\u00C9\u00E0\u00CE\u00B0\u00FA\u00CF\u00F6\u00A5 \u00C
 xe.panels.orphaned=\u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CC\u00EF\u00F2\u00CF\u00E3\u2260\u00CF\u00E3\u00FA\u00CF\u00F2\u00A7)
 xe.panels.quicklinks=\u00CF\u00F3\u00EA\u00CF\u00D1\u00FA
 xe.panels.quicklinks.blog=\u00CF\u2020\u00C4\u00CF\u00FB\u2022\u00CC\u00EF\u00FA\u00CE\u00E3\u00A7
-xe.panels.quicklinks.dashboard=\u00CD\u2202\u00E5\u00CE\u00B6\u00A8 \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CF\u00FB\u00EA
+xe.panels.quicklinks.dashboard=\uB300\uC2DC\uBCF4\uB4DC
 xe.panels.quicklinks.index=\u00CF\u00F3\u00EA
+xe.panels.quicklinks.userdirectory=\uC0AC\uC6A9\uC790 \uBAA9\uB85D
 xe.panels.rights.accesslevels=\u00CF\u2020\u00EB\u00CD\u2211\u00BA \u00CE\u2020\u00E0\u00CE\u2264\u00AE\u00CF\u00F9\u00C4
 xe.panels.rights.accesslevelsexplanation=\u00CF\u00F9\u00A5 \u00CE\u2202\u00D1\u00CF\u00EF\u00BA \u00CE\u00E3\u03C0\u00CF\u00E3\u2020\u00CF\u00F9\u00A5 \u00CF\u00DF\u00C4\u00CF\u2020\u00EF\u00CE\u00EA\u00FA \u00CF\u00C7\u00A8\u00CF\u00F6\u00A9\u00CF\u00FB\u00EA \u00CE\u221E\u00E8 \u00CD\u2211\u220F\u00CE\u00A3\u03C0\u00CF\u00F3\u00EA\u00CD\u2264\u00E5 \u00CF\u2020\u00C5\u00CF\u00F6\u00A9\u00CC\u00EF\u00F2\u00CD\u2265\u2020 \u00CF\u00E3\u2202\u00CF\u00F9\u00C4 \u00CF\u2020\u00EB\u00CD\u2211\u00BA \u00CE\u2020\u00E0\u00CE\u2264\u00AE\u00CF\u00F9\u00F2 \u00CE\u2122\u00D6\u00CE\u2202\u00C4\u00CE\u2022\u00BA \u00CC\u00E8\u00A8\u00CC\u00EF\u00AE\u00CC\u00EF\u00A5\u00CF\u00EF\u00BA \u00CC\u00EF\u00FA\u00CE\u00E3\u00A7. \u00CF\u00FA\u2020\u00CC\u00F6\u00AE\u00CC\u00EF\u00FA \u00CF\u2020\u00EB\u00CD\u2211\u00BA \u00CE\u2020\u00E0\u00CE\u2264\u00AE\u00CF\u00F9\u00C4\: , \u00CD\u220F\u221E\u00CE\u00B0\u00F9\u00CD\u220F\u221E\u00CE\u00E4\u00EE \u00CC\u00EE\u00D1\u00CE\u00B0\u00FA\u00CD\u2211\u220F\u00CE\u00FB\u00AE\u00CC\u00EF\u00F2\u00CE\u00E4\u00EE, admin \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CC\u00EF\u00F2\u00CD\u2265\u2020, \u00CF\u2020\u00D1\u00CE\u00DF\u00F9\u00CC\u00EF\u00F2\u00CD\u2265\u2020, \u00CE\u00D6\u00BA\u00CC\u00E8\u00E2\u00CC\u00EF\u00FA\u00CE\u00E3\u00A7. \u00CF\u2020\u00D1\u00CE\u00DF\u00F9\u00CF\u00F3\u00EA \u00CF\u00FB\u00E0\u00CE\u00E4\u00EE \u00CE\u00E3\u03C0\u00CF\u00E3\u2020\u00CF\u00F9\u00F2 wiki\u00CE\u2022\u00BA \u00CE\u2265\u00A5\u00CC\u00F2\u220F\u00CC\u00EF\u00F2\u00CD\u220F\u221E \u00CF\u00FA\u00D1\u00CC\u00EF\u00F2\u00CF\u00F3\u00A8\u00CE\u00E4\u00EE \u00CC\u00E9\u220F\u00CF\u00DF\u00EB \u00CF\u00C9\u00C5\u00CC\u00C9\u00FA \u00CF\u00C7\u00A8\u00CF\u00F6\u00A9 "\u00CF\u2020\u00D1\u00CE\u00DF\u00F9, \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CC\u00EF\u00FA\u00CE\u00E3\u00A7"\u00CE\u2022\u00BA. \u00CF\u03A9\u00EE\u00CE\u00A9\u00F2\u00CC\u00E4\u220F \u00CF\u00C7\u00A8\u00CF\u00F6\u00A9 "\u00CF\u03A9\u00EE\u00CE\u00A9\u00F2\u00CC\u00E4\u220F" \u00CF\u2202\u00EE\u00CD\u221E\u00C4 \u00CE\u2265\u00A5\u00CC\u00F2\u220F\u00CC\u00EF\u00F2\u00CD\u220F\u221E \u00CF\u00FA\u00D1\u00CC\u00EF\u00F2\u00CF\u00F3\u00A8.
 xe.panels.rights.allowdeny=\u00CF\u00F9\u00A5 \u00CE\u2202\u00D1\u00CF\u00EF\u00BA\u00CE\u2022\u00BA <em>Allow</em>
@@ -1465,7 +1466,7 @@ xe.panels.rights.explanation=\u00CE\u00A8\u220F\u00CF\u00D1\u00FA\u00CF\u00F3\u0
 xe.panels.rights.groups=\u00CF\u00F9\u00A5
 xe.panels.rights.groupsexplanation=\u00CE\u2202\u00D1\u00CF\u00EF\u00BA\u00CE\u2022\u00BA \u00CE\u00E3\u03C0\u00CF\u00E3\u2020\u00CF\u00F9\u00A5 \u00CD\u2202\u00E5\u00CE\u00B6\u00A8\u00CE\u2022\u00BA\u00CF\u00F3\u00EA \u00CF\u2020\u00C5\u00CF\u00F6\u00A9\u00CC\u00EF\u00F2\u00CD\u2265\u2020 \u00CF\u00E3\u2202\u00CF\u00F9\u00C4 \u00CD\u221E\u00C5 \u00CD\u2211\u220F\u00CE\u00A3\u03C0\u00CF\u00F9\u00F2 wikiname\u00CE\u2022\u00BA \u00CC\u00E8\u00A8\u00CC\u00EF\u00AE\u00CC\u00EF\u00A5\u00CF\u00EF\u00BA \u00CC\u00EF\u00FA\u00CE\u00E3\u00A7 \u00CE\u2202\u00D1\u00CE\u2022\u00F2\u00CC\u00EF\u00FA\u00CE\u00E3\u00A7. <em>XWiki.XWikiAllGroup</em>\u00CE\u00E4\u00EE \u00CE\u00E3\u03C0\u00CF\u00E3\u2020\u00CF\u00F9\u00F2 Wiki\u00CF\u00F3\u00EA \u00CD\u2265\u00D1\u00CF\u2020\u00EF\u00CF\u00FA\u00BA\u00CE\u00B0\u00FA \u00CF\u00C7\u00A8\u00CF\u00F6\u00A9\u00CF\u00FB\u00EA\u00CE\u2264\u00E5\u00CF\u00B1\u00D1\u00CC\u00EF\u00F2 \u00CF\u00F3\u00EA\u00CF\u00D1\u00FA \u00CE\u2122\u00AE\u00CE\u00EB\u00EA\u00CF\u00F9\u00F2 \u00CD\u2211\u220F\u00CE\u00A3\u03C0\u00CF\u00F9\u00D1 \u00CE\u00E5\u00C4\u00CC\u00EB\u00FA\u00CC\u00EF\u00FA\u00CE\u00E3\u00A7.
 xe.panels.rights.groupsvirtualexplanation=<em>xwiki\: XWiki.XWikiAllGroup</em>\u00CE\u00E4\u00EE \u00CF\u00D1\u220F\u00CD\u2265\u00D1\u00CF\u2020\u00C5\u00CF\u00F9\u220F \u00CD\u2265\u00D1\u00CF\u2020\u00EF\u00CF\u00F9\u00D1 \u00CF\u00C7\u00A8\u00CF\u00F6\u00A9\u00CC\u00EF\u00A5 \u00CF\u00C7\u00A8\u00CF\u00F6\u00A9\u00CF\u00FB\u00EA\u00CE\u2264\u00E5\u00CF\u00B1\u00D1\u00CC\u00EF\u00F2 \u00CF\u00F3\u00EA\u00CF\u00D1\u00FA \u00CE\u2122\u00AE\u00CE\u00EB\u00EA\u00CF\u00F9\u00F2 \u00CD\u2211\u220F\u00CE\u00A3\u03C0\u00CF\u00F9\u00D1 \u00CE\u00E5\u00C4\u00CC\u00EB\u00FA\u00CC\u00EF\u00FA\u00CE\u00E3\u00A7.
-xe.panels.rights.help=\u00CD\u2202\u00E5\u00CE\u00B6\u00A8 \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CF\u00FB\u00EA \u00CE\u00E8\u00D1\u00CF\u00F5\u00C4
+xe.panels.rights.help=\uAD8C\uD55C \uD3B8\uC9D1\uAE30 \uB3C4\uC6C0\uB9D0
 xe.panels.rights.noauthentication=\u00CF\u00F1\u00A5\u00CE\u00F1\u00A7 \u00CF\u00FB\u00D6\u00CF\u00B6\u00F9 \u00CD\u221E\u00EF\u00CF\u2020\u00FA\u00CE\u00E8\u00D1 \u00CD\u2211\u220F\u00CE\u00B6\u00A8\u00CD\u2265\u2020 \u00CF\u00F1\u00A5\u00CE\u00F1\u00A7 \u00CD\u2202\u00E5\u00CE\u00B6\u00A8\u00CE\u00E8\u00D1 \u00CF\u00F3\u00DC\u00CF\u00F9\u00A5 Wiki\u00CE\u2022\u00BA \u00CF\u00F9\u00A5\u00CE\u00E3\u00A7 \u00CE\u2202\u00C4\u00CF\u2020\u00D1\u00CF\u00E4\u03C0\u00CF\u00FA\u00BA\u00CE\u00B0\u00FA \u00CE\u2265\u00A5\u00CD\u220F\u221E\u00CF\u00F4\u00C4 \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CF\u00F9\u00D1 \u00CF\u00FA\u00D1\u00CC\u00EF\u00A5 \u00CD\u2265\u00B5\u00CF\u00A7\u00EB \u00CF\u00DF\u00C4\u00CF\u2020\u00EF\u00CC\u00F1\u00E0\u00CE\u00E3\u00A7.
 xe.panels.rights.openaccess=\u00CF\u2020\u00EB\u00CD\u2211\u00BA \u00CE\u2020\u00E0\u00CE\u2264\u00AE\: "\u00CF\u2020\u00D1\u00CE\u00DF\u00F9 \u00CE\u2265\u00A5\u00CD\u220F\u221E\u00CF\u00F4\u00C4 \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CF\u00F9\u00D1 \u00CF\u00FA\u00D1\u00CC\u00EF\u00FA \u00CD\u2265\u00B5\u00CF\u00A7\u00EB Wiki\u00CE\u2022\u00BA \u00CF\u00FA\u00D1\u00CC\u00EF\u00A5,"\u00CE\u00E4\u00EE \u00CC\u00E9\u220F\u00CF\u00DF\u00EB\u00CC\u00EF\u00FA\u00CE\u00E3\u00A7.
 xe.panels.rights.openallow=\u00CC\u00F3\u00E0\u00CF\u00F6\u00A9\u00CC\u00EF\u00F2\u00CD\u00B1\u221E\u00CE\u00C7\u00F2 \u00CE\u2202\u00C4\u00CF\u2020\u00EF\u00CC\u00EF\u00F2\u00CF\u00E3\u2260\u00CF\u00E3\u00FA\u00CF\u00F2\u00A7\: 
