--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_tr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_tr.properties
@@ -2017,6 +2017,10 @@ rendering.macro.include.parameter.context.name=ba\u011Flam
 rendering.macro.include.parameter.context.value.CURRENT=G\u00FCncel
 rendering.macro.include.parameter.context.value.NEW=Yeni
 rendering.macro.include.parameter.document.name=belge
+rendering.macro.include.parameter.reference.name=referans
+rendering.macro.include.parameter.section.description=bir b\u00F6l\u00FCm\u00FCn\u00FCn iste\u011Fe ba\u011Fl\u0131 id belirtilen belgeye dahil etmek .
+rendering.macro.include.parameter.section.name=b\u00F6l\u00FCm
+rendering.macro.include.parameter.type.name=tip
 rendering.macro.info.description=bir bilgi mesaj\u0131 notu g\u00F6r\u00FCnt\u00FCler .
 rendering.macro.info.name=Bilgi Mesaj\u0131
 rendering.macro.messageSender.description=Kullan\u0131c\u0131lar\u0131nMessageStream mod\u00FCl\u00FC taraf\u0131ndan i\u015Flenir mesajlar\u0131 girmek i\u00E7in izin veren bir denetim .
