[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -1273,6 +1273,7 @@ core.viewers.jump.dialog.actions.view.shortcuts='Entr\u00E9e', 'Meta+V'
 core.viewers.jump.dialog.actions.view.tooltip=Afficher la page (Entr\u00E9e, Meta + V)
 core.viewers.jump.dialog.content=Aller \u00E0 \:
 core.viewers.jump.dialog.input.tooltip=Espace.Page
+core.viewers.jump.dialog.invalidNameError=Nom de page invalide. Le format \u00E0 respecter est \: Espace.Page.
 core.viewers.jump.quickLinksText=Aller \u00E0 n'importe quelle page du wiki (Meta+G)
 core.viewers.jump.shortcuts='Meta+G', 'Ctrl+G', 'Ctrl+/', 'Meta+/'
 core.viewers.jump.suggest.noResults=Aucun document trouv\u00E9
