[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -466,6 +466,7 @@ admin.templates.createprovider.space=Espace \:
 admin.templates.description=R\u00E9glages des mod\u00E8les de document
 admin.templates.providerslist=Fournisseurs de mod\u00E8le de document disponibles
 admin.translations=Traductions
+admin.userdirectory=Annuaire Utilisateurs
 admin.userprofile=Profil de l'utilisateur
 admin.userprofile.description=G\u00E9rer les informations \u00E0 afficher dans la page de profil de chaque utilisateur.
 admin.users=Utilisateurs
@@ -919,7 +920,7 @@ core.menu.create.comment=Ajouter un commentaire \u00E0 la page
 core.menu.create.page=Cr\u00E9er une nouvelle page
 core.menu.create.pageFromOffice=Cr\u00E9er une page \u00E0 partir d'un Document Office
 core.menu.create.space=Cr\u00E9er un espace
-core.menu.create.wiki=Wiki
+core.menu.create.wiki=Cr\u00E9er un wiki
 core.menu.delete=Supprimer
 core.menu.edit=Modifier
 core.menu.edit.class=Classe
@@ -1875,6 +1876,7 @@ platform.appwithinminutes.liveTableEditorHelpDescription=Les colonnes g\u00E9n\u
 platform.appwithinminutes.liveTableEditorHelpTitle=Aide
 platform.appwithinminutes.liveTableEditorIcon=Ic\u00F4ne
 platform.appwithinminutes.liveTableEditorIconHint=Vous devez fournir une r\u00E9f\u00E9rence \u00E0 une ic\u00F4ne 16x16px. Vous pouvez choisir un nom de notre  <a href\="{0}" target\="_blank">collection d''ic\u00F4nes par d\u00E9faut</a> et utiliser le pr\u00E9fixe **icon\:**. Par exemple\: **icon\:application**.   
+platform.appwithinminutes.liveTableEditorIconHintWithPicker=Une r\u00E9f\u00E9rence \u00E0 une ic\u00F4ne. Cele peut \u00EAtre n'importe quelle image dans le wiki mais \u00E9galement une ic\u00F4ne affich\u00E9e dans le s\u00E9lecteur d'ic\u00F4nes lorsque celui-ci est actif.
 platform.appwithinminutes.liveTableEditorImagesColumnDescription=Une colonne sp\u00E9ciale qui affiche les images attach\u00E9es \u00E0 la page de l'entr\u00E9e
 platform.appwithinminutes.liveTableEditorImagesColumnName=Images
 platform.appwithinminutes.liveTableEditorMoveColumnHint=Glissez-D\u00E9posez pour modifier l'ordre
@@ -3231,7 +3233,7 @@ xe.document.copy.language=Langue \:
 xe.document.copy.source=Document \u00E0 copier
 xe.document.copy.target=Document de destination
 xe.document.copying=Le document {0} est en train d''\u00EAtre copi\u00E9 sur {1}
-xe.home.title=Bienvenue sur votre wiki
+xe.home.title=Accueil
 xe.index=Index
 xe.index._actions=Actions
 xe.index.attachments=Fichiers joints
