[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -224,6 +224,9 @@ XWiki.XWikiPreferences_ldap_user_group.hint=Uniquement les membres du groupe sui
 XWiki.XWikiPreferences_ldap_validate_password=Valider le nom d'utilisateur / le mot de passe LDAP
 XWiki.XWikiPreferences_leftPanels=Panels affich\u00E9s sur la gauche
 XWiki.XWikiPreferences_leftPanelsWidth=Largeur de la colonne du panneau de gauche
+XWiki.XWikiPreferences_leftPanelsWidth_Large=Grand
+XWiki.XWikiPreferences_leftPanelsWidth_Medium=Moyen
+XWiki.XWikiPreferences_leftPanelsWidth_Small=Petit
 XWiki.XWikiPreferences_macros_groovy=Macros pour Groovy
 XWiki.XWikiPreferences_macros_languages=Langue des macros
 XWiki.XWikiPreferences_macros_mapping=Mapping des macros
@@ -247,6 +250,9 @@ XWiki.XWikiPreferences_renderXWikiRadeoxRenderer=Rendu de la syntaxe wiki
 XWiki.XWikiPreferences_renderXWikiVelocityRenderer=Rendu du code Velocity
 XWiki.XWikiPreferences_rightPanels=Panels affich\u00E9s sur la droite
 XWiki.XWikiPreferences_rightPanelsWidth=Largeur de la colonne du panneau de droite
+XWiki.XWikiPreferences_rightPanelsWidth_Large=Grand
+XWiki.XWikiPreferences_rightPanelsWidth_Medium=Moyen
+XWiki.XWikiPreferences_rightPanelsWidth_Small=Petit
 XWiki.XWikiPreferences_showLeftPanels=Afficher la colonne de gauche pour les panels
 XWiki.XWikiPreferences_showRightPanels=Afficher la colonne de droite pour les panels
 XWiki.XWikiPreferences_showannotations=Afficher les annotations
@@ -466,6 +472,7 @@ admin.templates.createprovider.space=Espace \:
 admin.templates.description=R\u00E9glages des mod\u00E8les de document
 admin.templates.providerslist=Fournisseurs de mod\u00E8le de document disponibles
 admin.translations=Traductions
+admin.userdirectory=Annuaire Utilisateurs
 admin.userprofile=Profil de l'utilisateur
 admin.userprofile.description=G\u00E9rer les informations \u00E0 afficher dans la page de profil de chaque utilisateur.
 admin.users=Utilisateurs
@@ -919,7 +926,7 @@ core.menu.create.comment=Ajouter un commentaire \u00E0 la page
 core.menu.create.page=Cr\u00E9er une nouvelle page
 core.menu.create.pageFromOffice=Cr\u00E9er une page \u00E0 partir d'un Document Office
 core.menu.create.space=Cr\u00E9er un espace
-core.menu.create.wiki=Wiki
+core.menu.create.wiki=Cr\u00E9er un wiki
 core.menu.delete=Supprimer
 core.menu.edit=Modifier
 core.menu.edit.class=Classe
@@ -1222,6 +1229,7 @@ core.viewers.diff.metadata.language=Langue
 core.viewers.diff.metadata.name=Nom
 core.viewers.diff.metadata.parent=Parent
 core.viewers.diff.metadata.space=Espace
+core.viewers.diff.metadata.syntax=Syntaxe
 core.viewers.diff.metadata.title=Titre
 core.viewers.diff.metadata.web=Espace
 core.viewers.diff.newValue=Nouvelle valeur
@@ -1520,6 +1528,7 @@ extensions.info.fetch.failed=Les donn\u00E9es de cette extension n'ont pas \u00E
 extensions.info.fetch.unauthorized=Demande non autoris\u00E9e. Soit votre session a expir\u00E9 ou vous avez perdu vos droits d\u2019acc\u00E8s lors de l'installation ou de la d\u00E9sinstallation d'une extension. Vous devrez vous identifier de nouveau afin de continuer. Comment souhaitez-vous proc\u00E9der?
 extensions.info.globalNamespace=espace de noms global
 extensions.info.id=Id
+extensions.info.issueManagement=Probl\u00E8mes
 extensions.info.jobLog=Journal d'ex\u00E9cution
 extensions.info.jobLog.install=Journal d'installation
 extensions.info.jobLog.installplan=Journal d'installation
@@ -1535,10 +1544,12 @@ extensions.info.stableVersions.linkLabel=Liste des versions stables
 extensions.info.stableVersions.noResults=Aucune version stable disponible.
 extensions.info.status.core=Install\u00E9 par d\u00E9faut
 extensions.info.status.installed=Install\u00E9
+extensions.info.status.installed-dependency=Install\u00E9 en tant que d\u00E9pendance
 extensions.info.status.installed-invalid=Install\u00E9 mais invalide
 extensions.info.status.remote-core=La version {0} est install\u00E9e
 extensions.info.status.remote-core-incompatible=Incompatible avec la version {0} install\u00E9e
 extensions.info.status.remote-installed=La version {0} est install\u00E9e
+extensions.info.status.remote-installed-dependency=La version {0} est install\u00E9e en tant que d\u00E9pendance
 extensions.info.status.remote-installed-incompatible=Incompatible avec la version {0} install\u00E9e
 extensions.info.status.remote-installed-invalid=La version {0} install\u00E9e est invalide
 extensions.info.type=Type
@@ -1778,6 +1789,7 @@ platform.appwithinminutes.appNameIsUsedWarning=Cette application existe d\u00E9j
 platform.appwithinminutes.appNameLabel=Nom de l'application
 platform.appwithinminutes.appNamePageTitle=Cr\u00E9ation de l'application
 platform.appwithinminutes.appNamePreviewClassReferenceLabel=Nom de la classe de l'application
+platform.appwithinminutes.appNamePreviewCodeSpaceLabel=Espace du code de l'application
 platform.appwithinminutes.appNamePreviewDataSpaceLabel=Espace des donn\u00E9es de l'application
 platform.appwithinminutes.appNamePreviewHomePageUrlLabel=URL de la page d'accueil de l'application
 platform.appwithinminutes.appPanelCreateEntry=Cr\u00E9ez votre propre application\!
@@ -1838,6 +1850,7 @@ platform.appwithinminutes.createAppButtonLabel=Cr\u00E9er une application
 platform.appwithinminutes.deleteAppConfirmation=L''application {0} et TOUS SES DOCUMENTS vont \u00EAtre d\u00E9truits. Etes-vous certain de vouloir continuer ?
 platform.appwithinminutes.deleteAppDoesNotExistError=L'application indiqu\u00E9e n'existe pas.
 platform.appwithinminutes.deleteAppEntriesConfirmation=TOUS LES DOCUMENTS de l''application {0} vont \u00EAtre d\u00E9truits. Etes-vous certain de vouloir continuer ?
+platform.appwithinminutes.deleteAppInvalidAppError=Le nom sp\u00E9cifi\u00E9 n'est pas une application App Within Minutes valide
 platform.appwithinminutes.deleteAppNotSpecifiedError=Aucun nom d'application n'a \u00E9t\u00E9 indiqu\u00E9.
 platform.appwithinminutes.description=Cr\u00E9ez des applications web puissantes en quelques minutes.
 platform.appwithinminutes.grantSpaceAdminRightsSaveComment=Donner des droits d'administration sur l'espace
@@ -1875,6 +1888,7 @@ platform.appwithinminutes.liveTableEditorHelpDescription=Les colonnes g\u00E9n\u
 platform.appwithinminutes.liveTableEditorHelpTitle=Aide
 platform.appwithinminutes.liveTableEditorIcon=Ic\u00F4ne
 platform.appwithinminutes.liveTableEditorIconHint=Vous devez fournir une r\u00E9f\u00E9rence \u00E0 une ic\u00F4ne 16x16px. Vous pouvez choisir un nom de notre  <a href\="{0}" target\="_blank">collection d''ic\u00F4nes par d\u00E9faut</a> et utiliser le pr\u00E9fixe **icon\:**. Par exemple\: **icon\:application**.   
+platform.appwithinminutes.liveTableEditorIconHintWithPicker=Une r\u00E9f\u00E9rence \u00E0 une ic\u00F4ne. Cele peut \u00EAtre n'importe quelle image dans le wiki mais \u00E9galement une ic\u00F4ne affich\u00E9e dans le s\u00E9lecteur d'ic\u00F4nes lorsque celui-ci est actif.
 platform.appwithinminutes.liveTableEditorImagesColumnDescription=Une colonne sp\u00E9ciale qui affiche les images attach\u00E9es \u00E0 la page de l'entr\u00E9e
 platform.appwithinminutes.liveTableEditorImagesColumnName=Images
 platform.appwithinminutes.liveTableEditorMoveColumnHint=Glissez-D\u00E9posez pour modifier l'ordre
@@ -2067,6 +2081,8 @@ platform.extension.distributionWizard.welcomeStepDescription=Cet assistant vous 
 platform.extension.distributionWizard.welcomeStepStepsHint=Les \u00E9tapes suivantes sont n\u00E9cessaires pour r\u00E9aliser l'installation de XWiki \:
 platform.extension.distributionWizard.welcomeStepTitle=Assistant de Distribution
 platform.extension.distributionWizard.wikisStepDescription=Les wikis suivants ont \u00E9t\u00E9 d\u00E9tect\u00E9s. Afin de mettre \u00E0 jour les pages wiki par d\u00E9faut pour chacun d'eux vous devez installer la version d'interface utilisateur recommand\u00E9e ci-dessous.
+platform.extension.info.error.versionNotCompatible=Cette version n'est pas compatible avec votre installation.
+platform.extension.info.error.versionNotCompatibleHint=Rechercher une version compatible en passant par la liste des \u00ABversions stables" situ\u00E9e dans l'onglet de "Description" de l'extension.
 platform.extension.updater.checkForUpdates=V\u00E9rifier les mises \u00E0 jour
 platform.extension.updater.checkForUpdatesGlobally=V\u00E9rifier les mises \u00E0 jour sur les fermes
 platform.extension.updater.createUpgradePlanFailure=La cr\u00E9ation du plan de mise \u00E0 jour a \u00E9chou\u00E9.
@@ -3231,7 +3247,7 @@ xe.document.copy.language=Langue \:
 xe.document.copy.source=Document \u00E0 copier
 xe.document.copy.target=Document de destination
 xe.document.copying=Le document {0} est en train d''\u00EAtre copi\u00E9 sur {1}
-xe.home.title=Bienvenue sur votre wiki
+xe.home.title=Accueil
 xe.index=Index
 xe.index._actions=Actions
 xe.index.attachments=Fichiers joints
