[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
@@ -36,6 +36,7 @@ Invitation.WebHome_allowUsersOfOtherWikis=Permite\u021Bi \u0219i altor utilizato
 Invitation.WebHome_emailClass=XClass pentru mesajul de email
 Invitation.WebHome_emailContainer=Document care con\u021Bine email XObjects
 Invitation.WebHome_emailRegex=Expresie regulat\u0103 pentru validarea adreselor de email
+Invitation.WebHome_from_address=Adres\u0103 email expeditor
 Invitation.WebHome_javamail_extra_props=Propriet\u0103\u021Bi suplimentare Javamail
 Invitation.WebHome_messageBodyTemplate=\u0218ablonul HTML pentru con\u021Binutul mesajului de email
 Invitation.WebHome_messageBodyTemplatePlain=\u0218ablonul text simplu pentru con\u021Binutul mesajului
@@ -43,6 +44,7 @@ Invitation.WebHome_smtp_port=Port SMTP
 Invitation.WebHome_smtp_server=Nume gazd\u0103 pentru serverul SMTP
 Invitation.WebHome_smtp_server_password=Parola SMTP
 Invitation.WebHome_smtp_server_username=Nume de utilizator SMTP
+Invitation.WebHome_subjectLineTemplate=\u015Eablon pentru subiectul email-ului
 Invitation.WebHome_usersMayPersonalizeMessage=Permite utilizatorilor s\u0103 personalizeze mesajele
 Invitation.WebHome_usersMaySendToMultiple=Permite utilizatorilor s\u0103 trimit\u0103 la mai multe adrese
 Panels.PanelClass_category=Categorie
@@ -72,6 +74,8 @@ XWiki.FeedEntryClass_url=URL
 XWiki.FeedEntryClass_xml=XML
 XWiki.GoogleAnalyticsCode_account=Cont
 XWiki.GoogleAnalyticsCode_method=Metod\u0103 de Urm\u0103rire
+XWiki.GoogleAnalyticsCode_method_classic=Clasic\u0103
+XWiki.GoogleAnalyticsCode_method_universal=Universal\u0103
 XWiki.JavaScriptExtension_cache=Politic\u0103 cache
 XWiki.JavaScriptExtension_code=Cod
 XWiki.JavaScriptExtension_name=Nume
@@ -87,6 +91,8 @@ XWiki.MessageStreamConfig_visibilityLevel_followers=Persoane interesate
 XWiki.MessageStreamConfig_visibilityLevel_group=Grup
 XWiki.MessageStreamConfig_visibilityLevel_user=Utilizator
 XWiki.Registration_defaultRedirect=Redirec\u021Bionare aici dup\u0103 \u00EEnregistrare
+XWiki.Registration_heading=Rubric\u0103 pagin\u0103 de \u00EEnregistrare
+XWiki.Registration_liveValidation_defaultFieldOkMessage=Mesaj de confirmare implicit
 XWiki.Registration_liveValidation_enabled=Activa\u021Bi validarea c\u00E2mpurilor cu JavaScript
 XWiki.Registration_loginButton_autoLogin_enabled=Permite autentificarea automat\u0103
 XWiki.Registration_loginButton_enabled=Activa\u0163i butonul de login
@@ -103,12 +109,21 @@ XWiki.SchedulerJobClass_status=Status
 XWiki.SearchConfigClass_engine=Motor de c\u0103utare prestabilit
 XWiki.SearchSuggestConfig_activated=Activat
 XWiki.SearchSuggestSourceClass_activated=Activat
+XWiki.SearchSuggestSourceClass_activated.hint=Dac\u0103 aceast\u0103 surs\u0103 este folosit\u0103 sau nu (c\u00E2t timp motorul de c\u0103utare al sursei se potrive\u015Fte cu cu cel folosit de wiki-ul curent).
 XWiki.SearchSuggestSourceClass_engine=Motor
-XWiki.SearchSuggestSourceClass_highlight=Eviden\u021Bia\u021Bi
+XWiki.SearchSuggestSourceClass_engine.hint=Motorul de c\u0103utare folosit pentru a recupera rezultatele. Aceast\u0103 surs\u0103 este ignorat\u0103 dac\u0103 wiki-ul curent este configurat sa foloseasc\u0103 un alt motor de c\u0103utare.
+XWiki.SearchSuggestSourceClass_highlight=Eviden\u0163iaz\u0103
+XWiki.SearchSuggestSourceClass_highlight.hint=Eviden\u0163iaz\u0103 textul c\u0103utat printre rezultatele sugerate.
+XWiki.SearchSuggestSourceClass_icon=Icoan\u0103
+XWiki.SearchSuggestSourceClass_icon.hint=Icoana folosit\u0103 pentru a marca rezultatele c\u0103ut\u0103rii ce provin din aceast\u0103 surs\u0103. E.g. icon\:user
 XWiki.SearchSuggestSourceClass_name=Nume
+XWiki.SearchSuggestSourceClass_name.hint=Numele folosit pentru a grupa rezultatele c\u0103ut\u0103rii ce provin din aceast\u0103 surs\u0103. Poate fi o cheie de traducere.
 XWiki.SearchSuggestSourceClass_query=Interogare
+XWiki.SearchSuggestSourceClass_query.hint=Interogarea care este folosit\u0103 de serviciul de c\u0103utare cu sugestii.
 XWiki.SearchSuggestSourceClass_resultsNumber=Limit\u0103
+XWiki.SearchSuggestSourceClass_resultsNumber.hint=Num\u0103rul maxim de rezultate de c\u0103utare ce provin din aceast\u0103 surs\u0103.
 XWiki.SearchSuggestSourceClass_url=Serviciu
+XWiki.SearchSuggestSourceClass_url.hint=Serviciul de c\u0103utare cu sugestii. Poate fi ori o referin\u0163\u0103 c\u0103tre un document ori un URL extern.
 XWiki.StyleSheetExtension_cache=Politic\u0103 cache
 XWiki.StyleSheetExtension_code=Cod
 XWiki.StyleSheetExtension_name=Nume
@@ -118,6 +133,8 @@ XWiki.TagClass_tags=Etichete
 XWiki.TemplateProviderClass_action_edit=Editeaz\u0103
 XWiki.TemplateProviderClass_action_saveandedit=Salveaz\u0103 \u0219i Editeaz\u0103
 XWiki.TemplateProviderClass_type_page=Pagina
+XWiki.TemplateProviderClass_type_space=Pagin\u0103 principal\u0103 a spatiului
+XWiki.WatchListClass_automaticwatch=Monitorizare automat\u0103 a documentelor
 XWiki.WatchListClass_automaticwatch_ALL=Orice modificare
 XWiki.WatchListClass_automaticwatch_MAJOR=Modific\u0103ri majore
 XWiki.WatchListClass_automaticwatch_NEW=Documente noi
@@ -127,9 +144,19 @@ XWiki.WatchListClass_documents=List\u0103 de documente, separate prin virgul\u01
 XWiki.WatchListClass_interval=Interval de notific\u0103ri e-mail
 XWiki.WatchListClass_query=Interogare (HQL)
 XWiki.WatchListClass_spaces=List\u0103 de spa\u021Bii, separate prin virgul\u0103
+XWiki.WysiwygEditorConfigClass_attachmentSelectionLimited=Selectare a ata\u015Famentelor limitat\u0103
+XWiki.WysiwygEditorConfigClass_cleanPaste=Cur\u0103\u0163\u0103 automat continutul lipit
 XWiki.WysiwygEditorConfigClass_colorPalette=Palet\u0103 de culori
 XWiki.WysiwygEditorConfigClass_colorsPerRow=Culori pe r\u00E2nd
 XWiki.WysiwygEditorConfigClass_externalImages=Imagini externe
+XWiki.WysiwygEditorConfigClass_fontNames=Nume de fonturi
+XWiki.WysiwygEditorConfigClass_fontSizes=M\u0103rimi de fonturi
+XWiki.WysiwygEditorConfigClass_imageSelectionLimited=Selectare a imaginilor limitat\u0103
+XWiki.WysiwygEditorConfigClass_menuBar=Bar\u0103 de meniu
+XWiki.WysiwygEditorConfigClass_plugins=Plugin-uri
+XWiki.WysiwygEditorConfigClass_sourceEditorEnabled=Editor de surs\u0103 activat
+XWiki.WysiwygEditorConfigClass_styleNames=Nume de stiluri
+XWiki.WysiwygEditorConfigClass_toolBar=Bar\u0103 de unelte
 XWiki.XWikiComments_author=Autor
 XWiki.XWikiComments_comment=Comentariu
 XWiki.XWikiComments_date=Data
@@ -143,6 +170,7 @@ XWiki.XWikiGroups_member=Membru
 XWiki.XWikiPreferences_accessibility=Activa\u021Bi func\u021Bionalit\u0103\u021Bi suplimentare de accesibilitate
 XWiki.XWikiPreferences_ad_clientid=ID Publicitate Client
 XWiki.XWikiPreferences_admin_email=Email-ul administratorului
+XWiki.XWikiPreferences_admin_email.hint=Adresa de email implicit\u0103 de pe care se trimit email-uri de notificare
 XWiki.XWikiPreferences_auth_active_check=Verificare activ\u0103 a autentific\u0103rii
 XWiki.XWikiPreferences_authenticate_edit=Autentificare la editare
 XWiki.XWikiPreferences_authenticate_view=Autentificare la vizualizare
@@ -160,10 +188,17 @@ XWiki.XWikiPreferences_edit_anonymous=Anonim
 XWiki.XWikiPreferences_edit_registered=\u00CEnregistrat
 XWiki.XWikiPreferences_editbox_height=\u00CEn\u0103l\u021Bimea casetei de editare
 XWiki.XWikiPreferences_editbox_width=L\u0103\u021Bimea casetei de editare
+XWiki.XWikiPreferences_editcomment=Activa\u0163i rezumatele de versiune
+XWiki.XWikiPreferences_editcomment_mandatory=Face\u0163i obligatorii rezumatele de versiune
 XWiki.XWikiPreferences_editor=Editorul Implicit
+XWiki.XWikiPreferences_guest_comment_requires_captcha=Activa\u0163i CAPTCHA \u00EEn comentarii pentru utilizatorii ne\u00EEnregistra\u0163i 
 XWiki.XWikiPreferences_invitation_email_content=Con\u021Binutul invita\u021Biei
 XWiki.XWikiPreferences_javamail_extra_props=Alte propriet\u0103\u021Bi JavaMail
 XWiki.XWikiPreferences_languages=Limbi disponibile
+XWiki.XWikiPreferences_ldap=LDAP
+XWiki.XWikiPreferences_ldap.hint=Activa\u0163i sau nu autentificare LDAP pentru acest wiki. Dac\u0103 este activat\u0103 \u015Fi configurat\u0103 corespunz\u0103tor, un utilizator local va fi creat atunci c\u00E2nd un utilizator LDAP viziteaz\u0103 acest wiki pentru prima dat\u0103.
+XWiki.XWikiPreferences_ldap_UID_attr=Nume de atribut pentru UID-ul LDAP
+XWiki.XWikiPreferences_ldap_UID_attr.hint=Specific\u0103 atributul LDAP ce con\u0163ine identificatorul folosit drept numele din XWiki. Valoarea implicit\u0103 este "cn".
 XWiki.XWikiPreferences_ldap_mode_group_sync_always=La fiecare autentificare a unui utilizator
 XWiki.XWikiPreferences_ldap_mode_group_sync_create=La crearea unui utilizator
 XWiki.XWikiPreferences_leftPanels=Panouri st\u00E2nga
